# Emo

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-10-p1-engineering-foundation.md  2026-06-11-emotion-core-phase1-inference.md
docs/superpowers/reviews/: 2026-06-12-comprehensive-review.md
docs/superpowers/specs/: 2026-06-11-embedded-emotion-core-design.md
src/: assets.py  config.py  dataset.py  evaluate.py  inference.py  logging_setup.py  model.py  optimize_distill.py  train.py  train_multiple.py  transforms.py  utils.py
src/engine/: base.py  onnx_engine.py
src/face/: crop.py  detector.py  fetch_yunet.py
src/runtime/: demo.py  pipeline.py  smoother.py
templates/: index.html
tests/: _fixtures.py  conftest.py  test_app.py  test_assets.py  test_config.py  test_crop.py  test_dataset.py  test_detector.py  test_engine.py  test_inference.py  test_logging_setup.py  test_model.py  test_model_input_size.py  test_optimize_distill.py  test_pipeline.py  test_smoother.py  test_train_contract.py  test_train_helpers.py  test_transforms.py
