[project]
name = "emotion-recognition"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
